Fix spacing between tag pills

--- a/frontend/src/components/tag/tag.scss
+++ b/frontend/src/components/tag/tag.scss
@@ -2,6 +2,7 @@ $pill-radius: 5px;
 
 .tag {
   font-size: small;
+  margin-right: 1vh;
 
   > * {
     border: white 1px solid;
